--- a/css/styles.css
+++ b/css/styles.css
@@ -83,14 +83,14 @@ header {
   
 }
 h1{
-color: #323334;
+color: black;
 font-size: 4em;
 margin-bottom: 0px;
 text-transform: uppercase;
     
 }
 h2{
-  color: #6C1C28;
+  color: #070102;
   text-transform: lowercase;
   font-size: 2em;
 }
