--- a/css/survey.css
+++ b/css/survey.css
@@ -27,8 +27,14 @@ fieldset{
   padding-left: 0;
 }
 legend{
-  padding: 0;
+  font-size: 0;
+}
+
+.favHead{
+  font-size: 1em;
   text-align: left;
+  padding-left: 0;
+  margin-left: 0;
 }
 
 input{
